# 2024-2025-Robotics-cup

./: .gitignore  README.md  deploy_script.sh  frames_2025-03-26_17.17.30.gv  localization.cpp  pathfromelasticband  restart_robonav.sh  robot.urdf  udo systemctl disable systemd-networkd-wait-online.service
Electrical/Eurobot2025PCB/: #auto_saved_files#  ECN.bak  ECN.kicad_sym  Eurobot2025PCB.kicad_pcb  Eurobot2025PCB.kicad_prl  Eurobot2025PCB.kicad_pro  Eurobot2025PCB.kicad_sch  Eurobot2025PCB.kicad_sch-bak  _autosave-Eurobot2025PCB.kicad_pcb  _autosave-Eurobot2025PCB.kicad_sch  fp-info-cache  fp-lib-table  logo.ai  sym-lib-table  ~Eurobot2025PCB.kicad_pcb.lck
Electrical/Eurobot2025PCB/3D/: INA219.SLDPRT
Electrical/Eurobot2025PCB/ECN.pretty/: 4R7.kicad_mod  A4988.kicad_mod  ESP32 WROOM 32D.kicad_mod  INA219 DC current sensor.kicad_mod  L9110.kicad_mod
Firmware/: .gitignore  README.md  platformio.ini
Firmware/data/: eb_path_fortest.txt  newtestpath.txt  newtestpath_2.txt  sinus_path.txt  straight_line_path.txt
Firmware/include/: BluetoothHandler.h  Config.h  DisplayHandler.h  InputHandler.h  MotorHandler.h  RFIDHandler.h  Utils.h  config.h  controlPanelHandler.h  debug.h  displayHandler.h  ecn_logo.h  motorHandler.h  point.h  pose.h  powerSensorHandler.h  pumpHandler.h  robot.h  servoHandler.h  stacking.h
Firmware/lib/SerialANSI/: SerialANSI.cpp
Firmware/src/: BluetoothHandler.cpp  DisplayHandler.cpp  InputHandler.cpp  RFIDHandler.cpp  Utils.cpp  controlPanelHandler.cpp  debug.cpp  main.cpp  motorHandler.cpp  powerSensorHandler.cpp  pumpHandler.cpp  robot.cpp  servoHandler.cpp  stacking.cpp
Individual test/Mobile base/: schematics esp32 2xNema17.fzz
Individual test/Mobile base/Nema_17_a4988/: Nema_17_a4988.ino
Individual test/init_stepper3/: init_stepper3.ino
Individual test/pcf8754_read8buttons/pcf8574_read8buttons/: pcf8574_read8buttons.ino
Individual test/ultrasonic_sensor/: ultrasonic_sensor.ino
Individual test/vacuum/: vacuum.ino
Mecanical/: FRONT_ACTUATOR_SIDE.STL
Mecanical/CAD/: test_fit_bearing.SLDPRT
Mecanical/CAD/BANNER/: BEARING.SLDPRT  BRACKET.SLDPRT  BRACKET.STL  FULL_MOTOR.SLDASM  MOVING_ASSEMBLY.SLDASM  MOVING_FRAME.SLDPRT  MOVING_FRAME.STL  TIRE.SLDPRT  WHEEL.SLDASM
Mecanical/CAD/GAME ELEMENT/: TIN_CAN.SLDPRT  WALL.SLDPRT  WOOD_PLATFORM.SLDPRT
Mecanical/CAD/MOBILE BASE/: BATTERY_HOLDER.SLDPRT  Base.DXF  Base.SLDDRW  Base.SLDPRT  RASBERY.SLDPRT  (+25 more)
PamiFirmware/data/: eb_path_fortest.txt  pami_path.txt  sinus_path.txt  straight_line_path.txt  straight_line_path_50cm.txt
PamiFirmware/include/: Config.h  displayConfig.h  displayHandler.h  ecn_logo.h  fileHandling.h  motorHandler.h  powerSensorHandler.h  robot.h
PamiFirmware/src/: fileHandling.cpp  main.cpp  motorHandler.cpp  powerSensorHandler.cpp  robot.cpp
SuperStar/: .gitignore  platformio.ini
SuperStar/include/: Config.h  Ultrasonic.h  displayConfig.h  displayHandler.h  fileHandling.h  motorHandler.h  point.h  robot.h
SuperStar/src/: fileHandling.cpp  main.cpp  motorHandler.cpp  powerSensorHandler.cpp  robot.cpp
auto_start/: README.md  one_go.service  one_go.sh
config/: robonav.rviz  withlidar.rviz  withoutlidar.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
localization/: CMakeLists.txt.ignore  test.cpp
localization/include/: astar.h  localization.h
localization/src/: localization.cpp
log/: latest_build
maze/: .clang-format  .gitignore  CMakeLists.txt
maze/include/: a_star.h  elastic_bands.h  fposition.h  maze.h  obstacle.h  point.h  point_hash.h  position.h  robot.h
maze/oldfiles/: maze_generation (copy 1).cpp  solve_cell_diagonal (copy 1).cpp  solve_corridor.cpp  solve_line.cpp
maze/src/: elastic_bands.cpp  interactive_generation.cpp  main.cpp  maze.cpp  maze_generation.cpp  point.cpp  prm.cpp  robot.cpp  solve_cell_diagonal.cpp
src/: frames_2025-04-03_17.35.40.gv
src/maze/: CMakeLists.txt  package.xml
src/maze/config/: navbot.rviz
src/maze/description/: gazebo_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
src/maze/include/: a_star.h
src/maze/launch/: launch_sim.launch.py  maze_gazebo.launch.py  maze_launch
src/maze/src/: cmd_vel_node.cpp  joint_commands_node.cpp  main.cpp  maze.cpp
src/robonav/: .gitignore  CMakeLists.txt  README.md  deploy.sh  package.xml  pathfromelasticband
src/robonav/autostart/: README.md  one_go.service  one_go.sh
src/robonav/config/: amcl.yaml  gazebo.ini  goals.yaml  goals_all.yaml  goals_blue.yaml  goals_blue_easy.yaml  goals_blue_final.yaml  goals_blue_straight.yaml  goals_blue_toback.yaml  goals_yellow copy.yaml  goals_yellow.yaml  goals_yellow_easy.yaml  goals_yellow_final.yaml  goals_yellow_straight.yaml  goals_yellow_toback.yaml  map_server_params.yaml  obstacles.yaml  plot_goals.py  robonav.rviz  ros2_control_params.yaml
src/robonav/config_othergoals/: goals_blue_push.yaml  goals_blue_push_all.yaml  goals_blue_toback.yaml  goals_yellow_push.yaml  goals_yellow_push_all.yaml  goals_yellow_toback.yaml
src/robonav/description/: gazebo_control.xacro  materials.xacro  robot.urdf  robot.urdf.xacro  robot_core.xacro  robot_core_small.xacro  rplidar_c1.xacro
src/robonav/include/: a_star.h  elastic_bands.h  led_control.h  maze.h  obstacle.h  point.h  pose.h  position.h  prm.h  robot.h
src/robonav/launch/: launch.launch.py  launch_sim.launch.py  rsp.launch.py  test_launch.py
src/robonav/rosbags/rosbag2_nantrobot_movingbyhand/: metadata.yaml
src/robonav/rosbags/rosbag2_nantrobot_notmoving/: metadata.yaml
src/robonav/scripts/: image_publisher.py  relay_scan.py
src/robonav/src/: build_and_deploy_from_rpi.sh  cmd_vel_publisher.cpp  diff_drive_publisher.cpp  elastic_bands.cpp  laser_to_pointcloud_node.cpp  led_test_node.cpp  main copy.cpp  main.cpp  main_6.cpp  maze.cpp  prm.cpp  robot.cpp
src/robonav/src/serial/: .gitignore
src/robonav/worlds/: Eurobot_map_real_bw_10_p_rviz.pgm  Eurobot_map_real_bw_10_p_rviz.yaml  aaaa  comp.world  competition.world  competition_can.world  competition_copy.world  draft.world  empty.world  robonav_map.yaml
(+149 files in other folders)
