<?xml version="1.0"?>
<package format="3">
  <name>robonav</name>
  <version>0.0.0</version>
  <description>ROS 2 Node für cmd_vel Steuerung</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>yaml-cpp</depend>
  <depend>tf2_ros</depend> 
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_sensor_msgs</depend>


  <exec_depend>opencv2</exec_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
